# SpdLogExample

./: CMakeLists.txt  README.md  README_TR.md  config.xml  logger.h  main.cpp  mylog.txt  spdlog_xml_lib.cpp  spdlog_xml_lib.h  test_app.cpp
